--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <div class="navbar-inner">
             <ul class="nav navbar-nav">
               <li><a href="#/home">Home</a></li>
+              <li><a href="#/portfolio">Portfolio</a></li>
             </ul>
           </div>
         </div>
