--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div ng-view></div>
 
         <hr>
-        Built with <span class="glyphicon glyphicon-heart"></span> by @sonnylazuardi
+        by IDE Team
       </div>
     </div>
   </div>
