--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>AniJS - A ScrollReveal Demo</title>
+    <title>IDE Works</title>
 
     <link rel="shortcut icon" type="assets/image/x-icon" href="img/favicon.png">
 
