--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#winners">Works</a>
+                        <a href="#works">Works</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#intro">Awards</a>
+                        <a href="#awards">Awards</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#using">Team</a>
+                        <a href="#team">Team</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#source">Contact</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -94,7 +94,7 @@
         </div>
     </header>
 
-    <section id="winners">
+    <section id="works">
         <div class="container" >
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -128,7 +128,7 @@
         </div>
     </section>
 
-    <section class="success" id="intro">
+    <section class="success" id="awards">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -162,7 +162,7 @@
         </div>
     </section>
 
-    <section id="using">
+    <section id="team">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -196,7 +196,7 @@
         </div>
     </section>
 
-    <footer id="source" class="text-center" data-anijs="if: scroll, on:window, do: flipInY animated, before: scrollReveal, after: removeAnim">
+    <footer id="contact" class="text-center" data-anijs="if: scroll, on:window, do: flipInY animated, before: scrollReveal, after: removeAnim">
         <div class="footer-above">
             <div class="container">
                 <div class="row" id="contact">
